<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">voice control ROS  </string>
    <string name="nomeAcJoystick">joystick ROS</string>
    <string name="stringaOk">ok</string>
    <string name="si">yes</string>
    <string name="no">none</string>
    <string name="eliminare">delete</string>
    <string name="stringaFunzione">Voice robot control</string>
    <string name="impostazioni">settings</string>
    <string name="riconnetti">reconnect</string>
    <string name="checkUsareAmcl">amcl and trajectory correction</string>
    <string name="usaDatiOdomPerTimer">use odometry tables</string>
    <string name="checkRilevaOstacoli">detect obstacles</string>
    <string name="avviaJoystick">start joystick</string>
    <string name="informazioni">info and commands</string>
    <string name="testoBenvenuto">Hi! press the microphone to give a command</string>
    <string name="velocità">speed</string>
    <string name="nodoNCM">not connected to master node</string>
    <string name="nodoI">node successfully initialized</string>
    <string name="nodoNI">there is a problem. Node not initialized</string>
    <string name="errMaster">not connected to the master node or the node does not exist</string>
    <string name="nodoSpento">node was shut down successfully</string>
    <string name="nodoNSpento">node could not be turned off</string>
    <string name="posizioneSalvata">saved location</string>
    <string name="dialMesPosSalvate">Do you want to keep the previously saved positions?</string>
    <string name="dialTitPosSalvate">Your saved locations</string>
    <string name="dialTitTempi">Odometry data</string>
    <string name="dialMesTempi">Do you want to use odometry data previously saved for the timer?</string>
    <string name="tabEliminata">table deleted</string>
    <string name="tabNoEliminata">could not delete table</string>
    <string name="noTabella">The table does not exist. </string>
    <string name="tabellaCreata">created table from odometry data</string>
    <string name="errCreazioneTabella">Error creating table from odometry data</string>
    <string name="tentRecuperoDaTopic">Attempt to recover data from the topic: </string>
    <string name="errRecuperoDaOdometria">Odometry data recovery error</string>
    <string name="testoSecondiAcc">acceleration (s)</string>
    <string name="testoSecondiFre">braking (s)</string>
    <string name="testoNumeroOdomMemorizzati">/odom values saved</string>
    <string name="testoAccMetri">acceleration (m)</string>
    <string name="testoAccRadianti">acceleration radians</string>
    <string name="testoFreMetri">braking (m)</string>
    <string name="testoFreRadianti">braking (rad)</string>
    <string name="dimensioniGriglia">Grid size</string>
    <string name="mostraGriglia">show grid</string>
    <string name="titoloImpostazioniTabelle">Tables obtained from odometry</string>
    <string name="tabella">table</string>
    <string name="avanti">forward</string>
    <string name="indietro">back</string>
    <string name="sinistra">left</string>
    <string name="destra">right</string>
    <string name="posizione">position</string>
    <string-array name="string_spinner_tabelle">
        <item>@string/avanti</item>
        <item>@string/indietro</item>
        <item>@string/destra</item>
        <item>@string/sinistra</item>
    </string-array>
    <string name="stringaInfoApp">
        \nThis application allows you to control by voice and via the touchscreen a differential robot that uses ROS 1.
        \nThe libraries alfa rosjava and ros-android are used for this purpose.
        \nLanguage supports Italian, English and Spanish.\n
        \nDegree in Computer Science\n
        \nUniversity of Basilicata\n
        \nAuthor: Thomas Antonio Tirone\n</string>
    <string name="titoloComandi">AVAILABLE COMMANDS</string>
    <string name="stringaComandi">Voice commands available:\n
        - FORWARD and BACK\n
        - RIGHT and LEFT\n
        - ANGLE\n
        - STOP\n
        - GO TO POSITION\n
        - SAVE THE POSITION\n
        - REPOSITION
        \nDescribed in detail later.\n
        \nTouch controls available:\n
        - GO TO POSITION
        \nEquivalent of the voice command, where to indicate the position you have to hold down a point on the map and rotate the
        arrow to indicate its orientation. Send location to topic /move_base_simple/goal .\n
        - JOYSTICK
        \nFunction accessible from the menu, through which a virtual joystick is shown with which it is possible to send messages to
        the topic /cmd_vel to move the robot.\n
    </string>
    <string name="infoGenerali">GENERAL INFORMATION</string>
    <string name="descrizioneInfoGenerali">
        - In the event of a slow connection or excessive packet loss, the application may stutter, even seem frozen, or be a
        little inaccurate. Be patient.\n
        \n- The application tries, if possible, to synchronize with the ntp provider server time:\n
        - DNS name: ntp1.inrim.it\n
        - IP address: 193.204.114.232\n
        \n- The viewable map is rendered on the basis of messages from the topics:\n
        - /map\n
        - /scan\n
        - /move_base/NavfnROS/plan\n
        - /move_base_simple/goal\n
        - /move_base/current_goal
        \nThe map can have a maximum size of 512 x 512 pixels, otherwise it will be cropped.\n
        \n- It is possible to visualize a Cartesian plane (XY) superimposed on the map and which shares its origin. The Cartesian
        plane can be resized or hidden in the application settings. The unit of measurement used in the plan is the meter (m).\n
        \n- If there are more \'valid commands\' within the same recognized vocal phrase: the last one will be taken over.\n
        \n- To separate the decimals from the integer part in a numeric value, you can use either a point (.) or a comma (,).\n
        \n- The maximum linear and angular velocities sent are 0.22 m/s and 0.22 rad/s respectively.\n
    </string>
    <string name="voceAMCL">AMCL and TRAJECTORY CORRECTION</string>
    <string name="infoAmclCorrezioneTraiettoria">
        The menu item \'amcl and trajectory correction\' allows you to use the messages coming from the topic /amcl_pose of the
        AMCL (Adaptive Monte Carlo Localization) node, running on another device and connected to the same master, to execute
        commands like:\n
        - \'FORWARD and BACK\'\n
        - \'RIGHT and LEFT\'\n
        - \'ANGLE\'
        \nCommands whose value is expressed in seconds (s) will always be executed using the timer.
        \nThis function, unlike the timer, allows, as far as possible, to orientate oneself in a known environment, correct the
        trajectory and the odometry of the robot.
        \n\nOPERATION
        \n- (Only for \'FORWARD and BACK\') Given the command, the target is shown on the map, represented by a green circle
        with a radius of 0.05 meters (m).
        \n\n- (Only for \'FORWARD and BACK\') During the march of the robot towards the target, at each message, the two
        half-lines that originate in its current position and that are tangent to the circumference of the circle will be calculated.
        Now, if the direction of movement of the robot does not fall between the two rays: the robot will be stopped and its
        direction will be corrected before starting again.
        \nIf the angle between the two half-lines should be less than 2° due to excessive distance: it is kept equal to 2°.
        \n\n- When approaching the target, the robot\'s movement is slowed down.
        \n\n- Should the robot overtake the target, it will be stopped and then its gear will be reversed.
        \n\n- If too many attempts are made to correct, the robot will be stopped and the command canceled.
        \n\nIn relation to the information contained in the messages and using any odometry tables, an objective is considered achieved when
        it is expected that the robot can be stopped:\n
        - inside the green circle.\n
        - in proximity to the angle to be reached, with a tolerance of 1.0 degree (°) from it.\n
    </string>
    <string name="voceOdometria">USE ODOMETRY TABLES</string>
    <string name="infoUsoTabelleDaOdom">
        The menu item \'use odometry tables\' allows the creation and use of acceleration and braking tables of a robot in the
        various types of movement and functions such as:\n
        - forward, backward, right and left\n
        - \'detect obstacles\' and \'amcl and trajectory correction\'.
        \n\nThe tables are created on the basis of the information contained in the messages received on the topic /odom.
        Tables can only be created if the command is executed via the timer, so either \'amcl and trajectory correction\'
        must be disabled or the AMCL node must not be running.
        \n- The acceleration table shows the values that bring the robot from a standstill to a steady speed (0.22 m/s).
        \n- The braking table contains the values that bring the robot from the operating speed to a speed of 0.0 m/s.
        \n- The steady state speed is the average of the values between the two tables.
        \nFor the creation of the tables to be successful, there must be no packet losses (messages) during the creation
        phase of the two tables.
        \nIt is possible to view the details of the tables or delete them within the application settings.
        \nIf necessary, linear interpolation is used on the values present on a single or both tables, in this case
        simultaneously, to obtain the information necessary to carry out the command.
        \n\nIf the tables have not been created or do not want to use: the relative acceleration and braking values are
        considered instantaneous.
    </string>
    <string name="voceRilevaOstacoli">DETECT OBSTACLES</string>
    <string name="infoRilevaOstacoli">
        The menu item \'detect obstacles\' allows, as per the title, the detection of any obstacles during the execution of the
        commands of the \'FORWARD and BACK\' type only.
        \nIn the event that an object is detected in the current direction of movement, at a distance of less than 0.25 meters (m)
        plus the braking distance at the current speed obtained from the odometry tables: the robot will immediately stop running
        and the execution of the current command.
        \nFor this to work it is necessary that the topic /scan to be subscribed is present and that the characteristics of the
        scanning sensor, contained in the messages, reflect the following characteristics:\n
        - angle_min = 0.0 rad\n
        - angle_max &gt;= 6.28 rad\n
        - range_min &lt;= 0.25 m.\n
    </string>
    <string name="voceTimer">TIMER</string>
    <string name="infoTimer">
        The timer is used in case the AMCL node is not available or the \'amcl and trajectory correction\' item is not checked.
        The types of commands compatible with the timer are:\n
        - FORWARD and BACK\n
        - RIGHT and LEFT\n
        \nThe timer, to carry out the command, does not use the current position, but rather the time necessary to execute the
        command is pre-calculated, using or not, by choice or absence, the relative tables of odometry values.
        Therefore, the execution of the command using the timer does not allow to correct the trajectory if necessary (eg wheel
        slip).\n
    </string>
    <string name="avantiIndietro">FORWARD and BACK</string>
</resources>